Initial commit: Set up Flask application with file upload and processing functionality, including front-end integration and basic styling.

--- a/.gitignore
+++ b/.gitignore
@@ -527,3 +527,10 @@ MigrationBackup/
 .ionide/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,vs
+
+# Add these lines to existing .gitignore
+uploads/
+converted_files/
+__pycache__/
+*.pyc
+.env
