--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ werkzeug==2.3.7
 pathlib==1.0.1
 uuid==1.30
 
+# Additional dependencies for Vercel
+gunicorn==21.2.0
+
 # python-dotenv==1.0.0 - For loading environment variables from .env file
 # openai==1.3.0 - For SambaNova API integration
 # PyMuPDF==1.23.8 - For advanced PDF handling (fitz)
